added # in join room when irc protocol selected

https://bugzilla.gnome.org/show_bug.cgi?id=631236